--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -1,1 +1,52 @@
-Bach is a stupid BITCH!!!
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="/" class="navbar-brand">
+        <span class="glyphicon glyphicon-search"></span>
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <i class="fa fa-home" aria-hidden="true"></i>
+        </a>
+
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#collapsableContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="collapsableContent">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+
+          <% if session[:current_user] %>
+          <li class="nav-item">
+            <a class="nav-link">
+              <%= session[:current_user]["name"] %>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to "Logout", logout_path, method: :delete, class: "nav-link" %>
+          </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", login_path, class: "nav-link" %>
+          </li>
+          <% end %>
+
+        </ul>
+      </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+
+            <a href="#" class="nav-link" style="color: white">Compose</a>
+            <a href="#" class="nav-link" style="color: white">Friends</a>
+            <a href="#" class="nav-link" style="color: white">Sent Mail</a>
+
+    </div>
+
+    <div class="col-9">
+
+
+    </div>
+  </div>
+</div>
