cap nhat co so du lieu

--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -37,7 +37,7 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-
+            <a href="#" class="nav-link" style="color: white">Inbox</a>
             <a href="#" class="nav-link" style="color: white">Compose</a>
             <a href="#" class="nav-link" style="color: white">Friends</a>
             <a href="#" class="nav-link" style="color: white">Sent Mail</a>
@@ -45,7 +45,6 @@
     </div>
 
     <div class="col-9">
-
 
     </div>
   </div>
