--- a/app/views/mail/_thumbnail.html.erb
+++ b/app/views/mail/_thumbnail.html.erb
@@ -1,5 +1,19 @@
 <div class="mail-thumbnail" highlight>
 
-  sdfgaded
+  <!--<div class="card-body">
+      <h4 class="card-title">
+      	<%= link_to blog_path(a.id), class: "card-title" do %>
+      	<% end %>
+      </h4>
+      <h6 class="card-subtitle mb-2 text-muted"><%= a.user.name %></h6>
+      <p class="card-text">
+      	<%= truncate(a.body) %>
+      </p>
+      <%= link_to blog_path(a.id), class: 'card-link', remote: true, method: :delete do %>
+      	Delete
+      <% end %>
+  </div>-->
+
+  asd
 
 </div>
