--- a/app/views/mail/detailreceive.html.erb
+++ b/app/views/mail/detailreceive.html.erb
@@ -45,7 +45,21 @@
 
     <div class="col-9">
 
+      <div class="col-md-12">
+        <div class="row mt-3" id="sender">
+          <p>From: </p><strong>&nbsp;<%=@message.sendmail.user.name%></strong>&nbsp;&nbsp;(<%=@message.sendmail.user.email%>)
+        </div>
+        <div class="row" id="receiver">
+      		<p>To: </p><strong>&nbsp;<%=@message.receivemail.user.name%></strong>&nbsp;&nbsp;(<%=@message.receivemail.user.email%>)
+      	</div>
+        <div class="row" id="senddate">
+          <p>Sent time: </p><i>&nbsp;<%=@message.sendmail.created_at%></i>
+        </div>
+      	<div class="row" id="body">
 
+      	<p>Content:<i>&nbsp;<%=@message.body%></i></p>
+      	</div>
+      </div>
 
     </div>
   </div>
