--- a/app/views/friend/index.html.erb
+++ b/app/views/friend/index.html.erb
@@ -44,35 +44,27 @@
     </div>
 
     <div class="col-9">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>From</th>
-              <th>Content</th>
-              <th>Time</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @rmss.each do |rm| %>
-            <% if !rm.seen %>
-                <tr onclick="location.href='<%= detailreceive_path(rm) %>'" id="read">
-                  <td><strong><%= rm.sender%></strong></td>
-                  <td id="<%=rm.id%>" class="body"><strong><%= rm.body %></strong></td>
-                  <td><strong><%= rm.created_at %></strong></td>
-                </tr>
-            <% else %>
-                <tr>
-                  <td><%= rm.sender %></td>
-                  <td id="<%=rm.id%>" class="body"><%= rm.body %></td>
-                  <td><%= rm.created_at %></td>
-                </tr>
-            <% end %>
-            <% end %>
-              </tbody>
-            </table>
-        </table>
 
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @friend.each do |user| %>
 
+              <tr>
+                <td><strong><%= user.name%></strong></td>
+
+                <td><strong><%= user.email %></strong></td>
+              </tr>
+
+          <% end %>
+            </tbody>
+          </table>
+      </table>
     </div>
   </div>
 </div>
