--- a/app/views/mail/sent.html.erb
+++ b/app/views/mail/sent.html.erb
@@ -39,7 +39,7 @@
     <div class="col-3">
       <a href="/mail/compose" class="nav-link" style="color: white">Compose</a>
       <a href="/mail/received" class="nav-link" style="color: white">Inbox</a>
-      <a href="/mail/friends" class="nav-link" style="color: white">Friends</a>
+      <a href="/friends" class="nav-link" style="color: white">Friends</a>
       <a href="/mail/sent" class="nav-link" style="color: white">Sent Mail</a>
     </div>
 
