--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -40,6 +40,7 @@
       <a href="/mail/compose" class="nav-link" style="color: white">Compose</a>
       <a href="/mail/received" class="nav-link" style="color: white">Inbox</a>
       <a href="/friends" class="nav-link" style="color: white">Friends</a>
+      <a href="/request" class="nav-link" style="color: white">Friend Requests</a>
       <a href="/mail/sent" class="nav-link" style="color: white">Sent Mail</a>
     </div>
 
