--- a/app/views/friend/listrequest.html.erb
+++ b/app/views/friend/listrequest.html.erb
@@ -1,23 +1,73 @@
-<table class="table">
-  <thead>
-    <tr>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="/" class="navbar-brand">
+        <span class="glyphicon glyphicon-search"></span>
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <i class="fa fa-home" aria-hidden="true"></i>
+        </a>
 
-      <th>Name</th>
-      <th>Email</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#collapsableContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <% @users.each do |user| %>
+      <div class="collapse navbar-collapse" id="collapsableContent">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
 
-        <tr>
-          <td><%= user.user.name%></td>
-          <td><%= user.user.email %></td>
-          <td><button class="btn btn-success" onclick="location.href='<%= accept_path(user.user.id) %>'">Accept</button></td>
-        </tr>
+          <% if session[:current_user] %>
+          <li class="nav-item">
+            <a class="nav-link">
+              <%= session[:current_user]["name"] %>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to "Logout", logout_path, method: :delete, class: "nav-link" %>
+          </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", login_path, class: "nav-link" %>
+          </li>
+          <% end %>
+
+        </ul>
+      </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <a href="/mail/compose" class="nav-link" style="color: white">Compose</a>
+      <a href="/mail/received" class="nav-link" style="color: white">Inbox</a>
+      <a href="/friends" class="nav-link" style="color: white">Friends</a>
+      <a href="/request" class="nav-link" style="color: white">Friend Requests</a>
+      <a href="/mail/sent" class="nav-link" style="color: white">Sent Mail</a>
+    </div>
+
+    <div class="col-9">
+
+      <table class="table">
+        <thead>
+          <tr>
+
+            <th>Name</th>
+            <th>Email</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+              <tr>
+                <td><%= user.user.name%></td>
+                <td><%= user.user.email %></td>
+                <td><button class="btn btn-success" onclick="location.href='<%= accept_path(user.user.id) %>'">Accept</button></td>
+              </tr>
+
+          <% end %>
+        </tbody>
+      </table>
 
 
-    <% end %>
-  </tbody>
-</table>
+    </div>
+  </div>
+</div>
