--- a/app/views/friend/index.html.erb
+++ b/app/views/friend/index.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a href="/" class="navbar-brand">
-        <span class="glyphicon glyphicon-search"></span>
+
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <i class="fa fa-home" aria-hidden="true"></i>
         </a>
@@ -11,9 +11,7 @@
 
       <div class="collapse navbar-collapse" id="collapsableContent">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-
+          <li class="nav-item"><a href="/mail/received" class="nav-link">Home</a></li>
 
           <% if session[:current_user] %>
           <li class="nav-item">
@@ -51,19 +49,21 @@
           <%= form_with scope: :user, url: request_path, class:"form-inline my-2 my-lg-0", local: true do |f|%>
 
                      <%= f.text_field :email , :placeholder=>"Email", class: "form-control" %>
+                     &nbsp &nbsp
                      <button id="request" type="submit" class="btn btn--right">Add a friend</button>
-                     <% if flash[:error] %>
-                                             <p><span style="color: red"><%= flash[:error] %></span></p>
-                                          <%else%>
-                                             <p><span><span style="color: green;"><%= flash[:success] %></span></p>
-                     <%end%>
-            <% end %>
 
+            <% end %>
+            <% if flash[:error] %>
+                  <p><strong><span style="color: red"><%= flash[:error] %></span></strong></p>
+             <%else%>
+                  <p><strong><span style="color: green;"><%= flash[:success] %></span></strong></p>
+            <%end%>
       <table class="table">
         <thead>
           <tr>
             <th>Name</th>
             <th>Email</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -73,7 +73,7 @@
                 <td><i><%= user.name%></i></td>
 
                 <td><i><%= user.email %></i></td>
-                <td><button class="btn btn-success" onclick="location.href='<%= unfriend_path(user.id) %>'">Unfriend</button></td>
+                <td><button class="btn btn-success" style="background-color: #5e6263" onclick="location.href='<%= unfriend_path(user.id) %>'">Unfriend</button></td>
 
               </tr>
 
