--- a/app/views/friend/listrequest.html.erb
+++ b/app/views/friend/listrequest.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a href="/" class="navbar-brand">
-        <span class="glyphicon glyphicon-search"></span>
+
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <i class="fa fa-home" aria-hidden="true"></i>
         </a>
@@ -11,8 +11,7 @@
 
       <div class="collapse navbar-collapse" id="collapsableContent">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="/mail/received" class="nav-link">Home</a></li>
 
           <% if session[:current_user] %>
           <li class="nav-item">
@@ -59,7 +58,7 @@
               <tr>
                 <td><%= user.user.name%></td>
                 <td><%= user.user.email %></td>
-                <td><button class="btn btn-success" onclick="location.href='<%= accept_path(user.user.id) %>'">Accept</button></td>
+                <td><button class="btn btn-success" style="background-color: #5e6263" onclick="location.href='<%= accept_path(user.user.id) %>'">Accept</button></td>
               </tr>
 
           <% end %>
