--- a/app/views/mail/new.html.erb
+++ b/app/views/mail/new.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a href="/" class="navbar-brand">
-        <span class="glyphicon glyphicon-search"></span>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <i class="fa fa-home" aria-hidden="true"></i>
         </a>
@@ -11,8 +10,7 @@
 
       <div class="collapse navbar-collapse" id="collapsableContent">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="/mail/received" class="nav-link">Home</a></li>
 
           <% if session[:current_user] %>
           <li class="nav-item">
@@ -45,12 +43,11 @@
     </div>
 
     <div class="col-9">
-      <p><%= flash[:notice] %></p>
       <%= form_with model: @Message, local: true, :id=>"content" do |f|%>
       <div class="form-group">
         <label>To:</label>
         <%=select("", "chosen_id", User.find(session[:current_user]["id"]).users.collect {|r| [ r.email << ' (' << r.name << ') ', r.id ] },
-        {prompt: 'Choose a friend' },  {:class=>"form-control",:id=>"friend"}) %>
+        {prompt: 'Choose a friend' },  {:class=>"form-control", :style=>"height: 30px",:id=>"friend"}) %>
       </div>
       <div class="form-group" style="height: 300px">
         <label>Message</label>
