--- a/app/views/signup/new.html.erb
+++ b/app/views/signup/new.html.erb
@@ -2,7 +2,7 @@
     <div class="card card-container">
 <%= form_with scope: :user, url: signup_index_path, local: true do |f|%>
 <form class="form-signin">
-		<div class="form-group"
+		<div class="form-group">
 			<label for="">Name</label>
 			<%= f.text_field :name, class: "form-control" %>
 		</div>
